Added method to edit user for inner and outer consumers.
